# modBuilder

./: .gitignore  .gitlab-ci.yml  README.md  README.org  codecov.yml  meson.build  meson_options.txt
.github/scripts/: coverage_badge.py
.github/workflows/: tests.yml
doc/models/: ar.m  ar12.m  ar12panel.m  ar12panel_0.m  ar12panel_1.m  rbc12.mod  rbc12b.mod  rbc13.m  smc.m
doc/tex/: Makefile  slides.tex
docs/: .gitignore  README.md  requirements.txt
docs/source/: api.rst  architecture.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
src/: dynare_reserved_function_names.m  in.m  modBuilder_setup.m
src/+solvers/: newton.m  newton_system.m
src/@ast/: README.md  ast.m
src/@autoDiff1/: autoDiff1.m
src/@autoDiffN/: autoDiffN.m
src/@bytag/: bytag.m
src/@modBuilder/: modBuilder.m
src/missing/math/: ln.m
src/missing/stats/: normcdf.m  normpdf.m
tests/: AllTests.m  meson.build  run_all_tests_with_coverage.m  runtest.m
tests/ad/: t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m  t08.m  t09.m  t10.m  t11.m  t12.m  t13.m  t14.m  t15.m  t16.m  t17.m  t18.m  t19.m  t20.m  t21.m  t22.m  t23.m  t24.m  t25.m  t26.m  t27.m  t28.m  t29.m  t30.m  t31.m  t32.m  t33.m  t34.m  t35.m  t36.m  t37.m  t38.m  t39.m  t40.m  (+3 more)
tests/ar/: ar1.m  ar2.m  ar3.m  ar4.m  ar5.m
tests/ast/: t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m  t08.m  t09.m  t10.m  t11.m  t12.m  t13.m  t14.m  t15.m  t16.m  t17.m  t18.m  t19.m  t20.m  t21.m  t22.m  t23.m  t24.m  t25.m  t26.m  t27.m  t28.m  t29.m
tests/display/: t01.m  t02.m  t03.m
tests/eliminate/: t01.m
tests/eq/: t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m  t08.m
tests/errors/: t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m  t08.m  t09.m  t10.m  t11.m  t12.m  t13.m  t14.m  t15.m  t16.m  t17.m  t18.m  t19.m  t20.m  t21.m  t22.m  t23.m  t24.m  t25.m  t26.m  t27.m  t28.m  t29.m  t30.m  t31.m  t32.m  t33.m  t34.m  t35.m  t36.m  t37.m  t38.m  t39.m
tests/evaluate/: t01.m  t02.m
tests/examples/: add.m  change.m  copy.m  endogenous.m  equationmap.m  exogenise.m  exogenize.m  exogenous.m  extract.m  flip.m  inline.m  listeqbytag.m  lookfor.m  lookfor_regex.m  merge.m  parameter.m  reassign.m  remove.m  rename.m  rm.m  rmflip.m  select.m  solve_system.m  steady.m  subs.m  substitute.m  tag.m  typeof.m  write.m
tests/flip/: t01.m  t02.m  t03.m
tests/foc/: t01.m  t02.m  t03.m
tests/implicit-loops/: t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m
tests/inline/: t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m  t08.m  t09.m
tests/load-mod-file/: auto_match_static.m  rbc1-modfile-original.json  rbc1.m  rbc1.mat  rbc1.true.mod  rbc1auto.m  rbc1auto.true.mod  rbc1autononlinear.m  rbc1autopartial.m  rbc1tags.m  rbc2-modfile-original.json  rbc2.m  rbc2.mat  rbc2.true.mod
tests/merge/: t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m
tests/metadata/: t01.m  t02.m  t03.m
tests/normal/: t01.m  t02.m
tests/partial/: t01.m  t02.m
tests/precision/: precision_default.true.mod  precision_high.true.mod  precision_initval.true.mod  t01.m
tests/rbc/: rbc1.m  rbc1.true.mod  rbc10.m  rbc11.m  rbc11.true.mod  rbc12-modfile-original.json  rbc12.expected-diff.mat  rbc12.m  rbc12.mat  rbc13.m  rbc14.m  rbc15.m  rbc15a.true.mod  rbc15b.true.mod  rbc2.m  rbc2.true.mod  rbc3.m  rbc3.true.mod  rbc4.m  rbc4.true.mod  rbc5.m  rbc5.true.mod  rbc6.m  rbc7.m  rbc8.m  rbc8.true.mod  rbc9.m
tests/reassign/: t01.m  t01_cycle.true.mod  t01_swap.true.mod
tests/rename/: rbc1.m  rbc2.m
tests/rm/: t01.m  t02.m  t03.m  t04.m  t05.m
tests/rmflip/: t01.m  t02.m  t03.m  t04.m
tests/solvers/: t00.m  t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m  t08.m  t09.m  t10.m  t11.m  t12.m  t13.m  t14.m  t15.m  t16.m  t17.m  t18.m  t19.m  t20.m  t21.m  t22.m  t23.m  t24.m  t25.m  t26.m  t27.m
tests/steady-options/: t01.m  t01_steady_opts.true.mod  t01_steady_opts_flag.true.mod
tests/steady-plan/: t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m  t08.m  t09.m  t10.m  t11.m  t12.m  t13.m  t14.m  t15.m  t16.m  t17.m  t18.m  t19.m  t20.m  t21.m  t22.m  t23.m
tests/steady-state-model/: t01.m  t02.m  t02.true.mod  t03.m  t03.true.mod  t04.m  t04.true.mod  t05.m  t05.true.mod  t06.m  t07.m  t08.m  t09.m  t10.m  t11.m  t12.m  t13.m  t14.m  t15.m  t15.true.mod
tests/subs/: rbc1.m  rbc2.m  t01.m  t02.m  t03.m  t04.m  t05.m  t06.m  t07.m  t08.m  t09.m  t10.m
tests/subsref/: rbc1.m  t01.m  t02.m  t03.m
tests/substitute/: rbc1.m  rbc2.m  rbc3.m  t01.m  t02.m  t03.m  t04.m  t05.m
tests/tag/: rbc1.m  rbc2.m  rbc2.true.mod  t01.m  t01.true.mod
tests/tex-linearise/: t01.m  t02.m
tests/tex-model/: t01.m  t02.m
tests/tex-plan/: t01.m
tests/tex-ss/: t01.m
tests/utils/: equation_equal.m  hashchararray.m  modiff.m
tests/validation/: t01.m  t02.m  t03.m  t04.m  t05.m
tests/write/: t01.m  t01_steady.true.mod  t01_steady_check.true.mod
