matlab = find_program(matlab_path, required: true)

listoftests = [
  'rbc/rbc1',
  'rbc/rbc2',
  'rbc/rbc3',
  'rbc/rbc4',
  'rbc/rbc5',
  'rbc/rbc7',
  'rbc/rbc8',
  'rbc/rbc9',
  'rbc/rbc10',
  'rbc/rbc11',
  'rbc/rbc13',
  'rbc/rbc14',
  'ar/ar1',
  'ar/ar2',
  'ar/ar3',
  'ar/ar4',
  'ar/ar5',
  'ad/t01',
  'ad/t02',
  'ad/t03',
  'ad/t04',
  'ad/t05',
  'ad/t06',
  'ad/t07',
  'ad/t08',
  'ad/t09',
  'ad/t10',
  'ad/t11',
  'ad/t12',
  'ad/t13',
  'ad/t14',
  'ad/t15',
  'ad/t16',
  'ad/t17',
  'ad/t18',
  'ad/t19',
  'ad/t20',
  'ad/t21',
  'ad/t22',
  'ad/t23',
  'ad/t24',
  'ad/t25',
  'ad/t26',
  'ad/t27',
  'ad/t28',
  'ad/t29',
  'ad/t30',
  'ad/t31',
  'ad/t32',
  'solvers/t00.m',
  'solvers/t01.m',
  'solvers/t02.m',
  'solvers/t03.m',
  'subsref/rbc1.m',
  'subs/rbc1.m',
  'subs/rbc2.m',
  'substitute/rbc1.m',
  'substitute/rbc2.m',
  'substitute/rbc3.m',
  'rename/rbc1.m',
  'rename/rbc2.m',
  'tag/rbc1.m',
  'tag/rbc2.m',
  'implicit-loops/t01.m',
  'implicit-loops/t02.m',
  'implicit-loops/t03.m',
  'load-mod-file/rbc1.m',
  'load-mod-file/rbc2.m',
  'merge/t01.m',
  'merge/t02.m',
  'merge/t03.m',
  'merge/t04.m',
  'merge/t05.m',
  'merge/t06.m',
  'merge/t07.m',
  'validation/t01.m',
  'validation/t02.m',
  'validation/t03.m',
]

listoffailingtests = [
   'rbc/rbc6'
]

foreach t : listoftests
  test(
    t,
    matlab,
    args: ['-batch', 'runtest("' + t + '")'],
    workdir: meson.current_source_dir(),
    timeout: 60
  )
endforeach

foreach t : listoffailingtests
  test(
    t,
    matlab,
    args: ['-batch', 'runtest("' + t + '")'],
    workdir: meson.current_source_dir(),
    should_fail: true,
    timeout: 60
  )
endforeach