matlab = find_program(matlab_path, required: true)

listoftests = [
  'rbc/rbc1',
  'rbc/rbc2',
  'rbc/rbc3',
  'rbc/rbc4',
  'rbc/rbc5',
  'rbc/rbc7',
  'rbc/rbc8',
  'rbc/rbc9',
  'rbc/rbc10',
  'rbc/rbc11',
  'rbc/rbc13',
  'rbc/rbc14',
  'rbc/rbc15',
  'ar/ar1',
  'ar/ar2',
  'ar/ar3',
  'ar/ar4',
  'ar/ar5',
  'ad/t01',
  'ad/t02',
  'ad/t03',
  'ad/t04',
  'ad/t05',
  'ad/t06',
  'ad/t07',
  'ad/t08',
  'ad/t09',
  'ad/t10',
  'ad/t11',
  'ad/t12',
  'ad/t13',
  'ad/t14',
  'ad/t15',
  'ad/t16',
  'ad/t17',
  'ad/t18',
  'ad/t19',
  'ad/t20',
  'ad/t21',
  'ad/t22',
  'ad/t23',
  'ad/t24',
  'ad/t25',
  'ad/t26',
  'ad/t27',
  'ad/t28',
  'ad/t29',
  'ad/t30',
  'ad/t31',
  'ad/t32',
  'solvers/t00.m',
  'solvers/t01.m',
  'solvers/t02.m',
  'solvers/t03.m',
  'subsref/rbc1.m',
  'subsref/t01.m',
  'subsref/t02.m',
  'subsref/t03.m',
  'subs/rbc1.m',
  'subs/rbc2.m',
  'subs/t01.m',
  'subs/t02.m',
  'subs/t03.m',
  'subs/t04.m',
  'subs/t05.m',
  'substitute/rbc1.m',
  'substitute/rbc2.m',
  'substitute/rbc3.m',
  'substitute/t01.m',
  'substitute/t02.m',
  'substitute/t03.m',
  'substitute/t04.m',
  'substitute/t05.m',
  'rename/rbc1.m',
  'rename/rbc2.m',
  'rm/t01.m',
  'rm/t02.m',
  'rm/t03.m',
  'rm/t04.m',
  'rm/t05.m',
  'flip/t01.m',
  'flip/t02.m',
  'flip/t03.m',
  'tag/rbc1.m',
  'tag/rbc2.m',
  'tag/t01.m',
  'implicit-loops/t01.m',
  'implicit-loops/t02.m',
  'implicit-loops/t03.m',
  'implicit-loops/t04.m',
  'implicit-loops/t05.m',
  'implicit-loops/t06.m',
  'implicit-loops/t07.m',
  'load-mod-file/rbc1.m',
  'load-mod-file/rbc2.m',
  'merge/t01.m',
  'merge/t02.m',
  'merge/t03.m',
  'merge/t04.m',
  'merge/t05.m',
  'merge/t06.m',
  'merge/t07.m',
  'validation/t01.m',
  'validation/t02.m',
  'validation/t03.m',
  'validation/t04.m',
  'examples/add.m',
  'examples/parameter.m',
  'examples/exogenous.m',
  'examples/endogenous.m',
  'examples/change.m',
  'examples/remove.m',
  'examples/rename.m',
  'examples/typeof.m',
  'examples/lookfor.m',
  'examples/lookfor_regex.m',
  'examples/write.m',
  'examples/copy.m',
  'examples/extract.m',
  'examples/merge.m',
  'examples/tag.m',
  'examples/rm.m',
  'examples/flip.m',
  'examples/subs.m',
  'examples/substitute.m',
  'examples/listeqbytag.m',
  'examples/select.m',
  'errors/t01.m',
  'errors/t02.m',
  'errors/t03.m',
  'errors/t04.m',
  'errors/t05.m',
  'errors/t06.m',
  'errors/t07.m',
  'errors/t08.m',
  'errors/t09.m',
  'errors/t10.m',
  'errors/t11.m',
  'errors/t12.m',
  'errors/t13.m',
  'errors/t14.m',
  'errors/t15.m',
  'errors/t16.m',
  'errors/t17.m',
  'errors/t18.m',
  'errors/t19.m',
  'errors/t20.m',
  'errors/t21.m',
  'errors/t22.m',
  'errors/t23.m',
  'errors/t24.m',
  'errors/t25.m',
  'errors/t26.m',
  'errors/t27.m',
  'errors/t28.m',
  'eq/t01.m',
  'eq/t02.m',
  'eq/t03.m',
  'eq/t04.m',
  'eq/t05.m',
  'eq/t06.m',
  'eq/t07.m',
  'eq/t08.m',
  'normal/t01.m',
  'normal/t02.m',
  'metadata/t01.m',
  'metadata/t02.m',
  'metadata/t03.m',
  'display/t01.m',
  'display/t02.m',
  'display/t03.m',
  'evaluate/t01.m',
  'precision/t01.m',
  'write/t01.m',
  'steady-options/t01.m',
]

listoffailingtests = [
   'rbc/rbc6'
]

foreach t : listoftests
  test(
    t,
    matlab,
    args: ['-batch', 'runtest("' + t + '")'],
    workdir: meson.current_source_dir(),
    timeout: 60
  )
endforeach

foreach t : listoffailingtests
  test(
    t,
    matlab,
    args: ['-batch', 'runtest("' + t + '")'],
    workdir: meson.current_source_dir(),
    should_fail: true,
    timeout: 60
  )
endforeach