matlab = find_program(matlab_path, required: true)

listoftests = [
  'rbc/rbc1',
  'rbc/rbc2',
  'rbc/rbc3',
  'rbc/rbc4',
  'rbc/rbc5',
  'rbc/rbc7',
  'rbc/rbc8',
  'rbc/rbc9',
  'rbc/rbc10',
  'rbc/rbc11',
  'rbc/rbc13',
  'rbc/rbc14',
  'rbc/rbc15',
  'ar/ar1',
  'ar/ar2',
  'ar/ar3',
  'ar/ar4',
  'ar/ar5',
  'ad/t01',
  'ad/t02',
  'ad/t03',
  'ad/t04',
  'ad/t05',
  'ad/t06',
  'ad/t07',
  'ad/t08',
  'ad/t09',
  'ad/t10',
  'ad/t11',
  'ad/t12',
  'ad/t13',
  'ad/t14',
  'ad/t15',
  'ad/t16',
  'ad/t17',
  'ad/t18',
  'ad/t19',
  'ad/t20',
  'ad/t21',
  'ad/t22',
  'ad/t23',
  'ad/t24',
  'ad/t25',
  'ad/t26',
  'ad/t27',
  'ad/t28',
  'ad/t29',
  'ad/t30',
  'ad/t31',
  'ad/t32',
  'ad/t33',
  'ad/t34',
  'ad/t35',
  'ad/t36',
  'ad/t37',
  'ad/t38',
  'ad/t39',
  'ad/t40',
  'ad/t41',
  'ad/t42',
  'ast/t01',
  'ast/t02',
  'ast/t03',
  'ast/t04',
  'ast/t05',
  'ast/t06',
  'ast/t07',
  'ast/t08',
  'ast/t09',
  'ast/t10',
  'ast/t11',
  'ast/t12',
  'ast/t13',
  'ast/t14',
  'ast/t15',
  'ast/t16',
  'ast/t17',
  'ast/t18',
  'ast/t19',
  'ast/t20',
  'ast/t21',
  'ast/t22',
  'ast/t23',
  'ast/t24',
  'ast/t25',
  'ast/t26',
  'foc/t01',
  'foc/t02',
  'foc/t03',
  'partial/t01',
  'partial/t02',
  'tex-model/t01',
  'tex-model/t02',
  'solvers/t00.m',
  'solvers/t01.m',
  'solvers/t02.m',
  'solvers/t03.m',
  'solvers/t04.m',
  'solvers/t05.m',
  'solvers/t06.m',
  'solvers/t07.m',
  'solvers/t08.m',
  'solvers/t09.m',
  'solvers/t10.m',
  'solvers/t11.m',
  'solvers/t12.m',
  'solvers/t13.m',
  'solvers/t14.m',
  'solvers/t15.m',
  'solvers/t16.m',
  'solvers/t17.m',
  'solvers/t18.m',
  'solvers/t19.m',
  'solvers/t20.m',
  'solvers/t21.m',
  'solvers/t22.m',
  'solvers/t23.m',
  'solvers/t24.m',
  'solvers/t25.m',
  'subsref/rbc1.m',
  'subsref/t01.m',
  'subsref/t02.m',
  'subsref/t03.m',
  'subs/t01',
  'subs/t02',
  'subs/t03',
  'subs/t04',
  'subs/t05',
  'subs/t06',
  'subs/t07',
  'subs/t08',
  'subs/t09',
  'subs/t10',
  'substitute/rbc1.m',
  'substitute/rbc2.m',
  'substitute/rbc3.m',
  'substitute/t01.m',
  'substitute/t02.m',
  'substitute/t03.m',
  'substitute/t04.m',
  'substitute/t05.m',
  'rename/rbc1.m',
  'rename/rbc2.m',
  'rm/t01.m',
  'rm/t02.m',
  'rm/t03.m',
  'rm/t04.m',
  'rm/t05.m',
  'flip/t01.m',
  'flip/t02.m',
  'flip/t03.m',
  'reassign/t01.m',
  'rmflip/t01.m',
  'rmflip/t02.m',
  'rmflip/t03.m',
  'rmflip/t04.m',
  'tag/rbc1.m',
  'tag/rbc2.m',
  'tag/t01.m',
  'implicit-loops/t01.m',
  'implicit-loops/t02.m',
  'implicit-loops/t03.m',
  'implicit-loops/t04.m',
  'implicit-loops/t05.m',
  'implicit-loops/t06.m',
  'implicit-loops/t07.m',
  'load-mod-file/rbc1.m',
  'load-mod-file/rbc2.m',
  'load-mod-file/rbc1auto.m',
  'load-mod-file/rbc1autopartial.m',
  'load-mod-file/rbc1autononlinear.m',
  'load-mod-file/rbc1tags.m',
  'load-mod-file/auto_match_static.m',
  'merge/t01.m',
  'merge/t02.m',
  'merge/t03.m',
  'merge/t04.m',
  'merge/t05.m',
  'merge/t06.m',
  'merge/t07.m',
  'validation/t01.m',
  'validation/t02.m',
  'validation/t03.m',
  'validation/t04.m',
  'validation/t05.m',
  'examples/add.m',
  'examples/parameter.m',
  'examples/exogenous.m',
  'examples/endogenous.m',
  'examples/change.m',
  'examples/remove.m',
  'examples/rename.m',
  'examples/typeof.m',
  'examples/lookfor.m',
  'examples/lookfor_regex.m',
  'examples/write.m',
  'examples/copy.m',
  'examples/extract.m',
  'examples/merge.m',
  'examples/tag.m',
  'examples/rm.m',
  'examples/flip.m',
  'examples/reassign.m',
  'examples/rmflip.m',
  'examples/exogenise.m',
  'examples/subs.m',
  'examples/substitute.m',
  'examples/listeqbytag.m',
  'examples/equationmap.m',
  'examples/select.m',
  'examples/solve_system.m',
  'errors/t01.m',
  'errors/t02.m',
  'errors/t03.m',
  'errors/t04.m',
  'errors/t05.m',
  'errors/t06.m',
  'errors/t07.m',
  'errors/t08.m',
  'errors/t09.m',
  'errors/t10.m',
  'errors/t11.m',
  'errors/t12.m',
  'errors/t13.m',
  'errors/t14.m',
  'errors/t15.m',
  'errors/t16.m',
  'errors/t17.m',
  'errors/t18.m',
  'errors/t19.m',
  'errors/t21.m',
  'errors/t22.m',
  'errors/t24.m',
  'errors/t25.m',
  'errors/t26.m',
  'errors/t27.m',
  'errors/t28.m',
  'errors/t29.m',
  'eq/t01.m',
  'eq/t02.m',
  'eq/t03.m',
  'eq/t04.m',
  'eq/t05.m',
  'eq/t06.m',
  'eq/t07.m',
  'eq/t08.m',
  'normal/t01.m',
  'normal/t02.m',
  'metadata/t01.m',
  'metadata/t02.m',
  'metadata/t03.m',
  'display/t01.m',
  'display/t02.m',
  'display/t03.m',
  'evaluate/t01.m',
  'evaluate/t02.m',
  'precision/t01.m',
  'write/t01.m',
  'steady-options/t01.m',
  'steady-state-model/t01.m',
  'steady-state-model/t02.m',
  'steady-state-model/t03.m',
  'steady-state-model/t04.m',
  'steady-state-model/t05.m',
  'steady-state-model/t06.m',
  'steady-state-model/t07.m',
  'steady-state-model/t08.m',
  'steady-state-model/t09.m',
  'steady-state-model/t10.m',
  'steady-state-model/t11.m',
  'steady-state-model/t12.m',
  'steady-state-model/t13.m',
  'steady-state-model/t14.m',
  'steady-state-model/t15.m',
  'steady-plan/t01.m',
  'steady-plan/t02.m',
  'steady-plan/t03.m',
  'steady-plan/t04.m',
  'steady-plan/t05.m',
  'steady-plan/t06.m',
  'steady-plan/t07.m',
  'steady-plan/t08.m',
  'steady-plan/t09.m',
  'steady-plan/t10.m',
  'steady-plan/t11.m',
  'steady-plan/t12.m',
  'steady-plan/t13.m',
  'steady-plan/t14.m',
  'steady-plan/t15.m',
  'steady-plan/t16.m',
  'steady-plan/t17.m',
  'steady-plan/t18.m',
  'steady-plan/t19.m',
  'steady-plan/t20.m',
  'steady-plan/t21.m',
  'steady-plan/t22.m',
  'steady-plan/t23.m',
  'examples/steady.m',
]

listoffailingtests = [
   'rbc/rbc6'
]

# Generate testlist.txt in the source tree so that AllTests.m (MATLAB
# unit-testing / coverage wrapper) can read the same list without
# duplicating it.
python3 = find_program('python3')
gen_args = ['-c',
            'import sys; open(sys.argv[1],"w").write("\\n".join(sys.argv[2:])+"\\n")',
            meson.current_source_dir() / 'testlist.txt']
foreach t : listoftests
  gen_args += t
endforeach
run_command(python3, gen_args, check: true)

foreach t : listoftests
  test(
    t,
    matlab,
    args: ['-batch', 'runtest("' + t + '")'],
    workdir: meson.current_source_dir(),
    timeout: 60
  )
endforeach

foreach t : listoffailingtests
  test(
    t,
    matlab,
    args: ['-batch', 'runtest("' + t + '")'],
    workdir: meson.current_source_dir(),
    should_fail: true,
    timeout: 60
  )
endforeach